--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,13 +2,18 @@
   <%= @post.content %>
 </div>
 <%= form_for post do |f| %>
-  <%= f.label "Title" %>
-  <%= f.text_field :title %>
-  <%= f.label "Content" %>
-  <%= f.text_area :content %>
-  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
-  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
-    <%= categories_fields.text_field :name %>
-  <% end %>
+  <%= f.label "Title" %><br>
+  <%= f.text_field :title %><br>
+  <%= f.label "Content" %><br>
+  <%= f.text_area :content %><br>
+  <fieldset>
+    <legend>Categories:</legend>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+    <br>
+    Add Custom Category:
+    <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+      <%= categories_fields.text_field :name %>
+    <% end %>
+  </fieldset>
   <%= f.submit %>
 <% end %>
